--- a/index.html
+++ b/index.html
@@ -310,6 +310,41 @@
                         </div>
                     </div>
                 </a>
+                <!-- Books Online Store Landing Page -->
+                <a href="https://aksel-elomari.github.io/Books/" rel="noopener" target="_blank" title="item-link" class="item">
+                    <img title="img" src="./images/Landing-Books.png">
+                    <div class="index">#9</div>
+                    <div class="name">Online Store To sell Books</div>
+                    <div class="des">
+                        <!-- 20 -->
+                        beutifull Landing Page for Online Store to sell Books
+                    </div>
+                    <div class="author">
+                        <div class="job">Front-End</div>
+                        <div class="time">
+                            2024/06/04
+                            <i class="fa-regular fa-clock"></i>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- Usage Dashboard for Online store / Books -->
+                <a href="https://aksel-elomari.github.io/Books__dash/" rel="noopener" target="_blank" title="item-link" class="item">
+                    <img title="img" src="./images/Dash-Books.png">
+                    <div class="index">#9</div>
+                    <div class="name">Online Store || Dashboard</div>
+                    <div class="des">
+                        <!-- 20 -->
+                        Beutifull and Responsive Designe for a user Dashbard in Books Website 
+                    </div>
+                    <div class="author">
+                        <div class="job">Front-End</div>
+                        <div class="time">
+                            2024/06/04
+                            <i class="fa-regular fa-clock"></i>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
