--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     </div>
                 </a>
                 <!-- Dashboar Page -->
-                <a href="" rel="noopener" target="_blank" title="item-link" class="item">
+                <a href="https://aksel-elomari.github.io/MoviesDashboard/" rel="noopener" target="_blank" title="item-link" class="item">
                     <img title="img" src="./images/dashboard.png">
                     <div class="index">#8</div>
                     <div class="name">Ecomerce website user Dashboard</div>
