--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     </div>
                 </a>
                  <!-- Hinto -->
-                <a href="" rel="noopener" target="_blank" title="item-link" class="item">
+                <a href="https://aksel-elomari.github.io/HINTO/" rel="noopener" target="_blank" title="item-link" class="item">
                     <img title="img" src="./images/mweb-03.png">
                     <div class="index">#7</div>
                     <div class="name">HINTO</div>
@@ -277,7 +277,7 @@
                     </div>
                 </a>
                 <!-- Anime_4U -->
-                <a href="" rel="noopener" target="_blank" title="item-link" class="item">
+                <a href="https://aksel-elomari.github.io/Anime_4U/" rel="noopener" target="_blank" title="item-link" class="item">
                     <img title="img" src="./images/mweb-02.png">
                     <div class="index">#8</div>
                     <div class="name">Anime_4u</div>
