--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
 
                 <div class="item">
-                    <i class="fa-brands fa-php"></i>
+                   <i class="fa-brands fa-vuejs" style="color:green;"></i>
                     <div class="name">VEU JS</div>
                     <div class="des">
                         <!-- 7 -->
