--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-    <div class="tab" id="experience">
+<!--     <div class="tab" id="experience">
         <div class="container">
             <div class="list">
                 <div class="item">
@@ -52,7 +52,6 @@
                         <div class="job">I'm Go To School</div>
                         <div class="company">Name School</div>
                         <div class="des">
-                            <!-- 15 -->
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates perspiciatis veniam animi reiciendis autem perferendis.
                         </div>
                     </div>
@@ -65,7 +64,6 @@
                         <div class="job">BackEnd Developer</div>
                         <div class="company">Name Company</div>
                         <div class="des">
-                            <!-- 15 -->
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates perspiciatis veniam animi reiciendis autem perferendis.
                         </div>
                     </div>
@@ -78,7 +76,6 @@
                         <div class="job">FrondEnd Developer</div>
                         <div class="company">Name Company ABC</div>
                         <div class="des">
-                            <!-- 15 -->
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates perspiciatis veniam animi reiciendis autem perferendis.
                         </div>
                     </div>
@@ -91,14 +88,13 @@
                         <div class="job">FullStack Developer</div>
                         <div class="company">Name Company AAA</div>
                         <div class="des">
-                            <!-- 15 -->
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates perspiciatis veniam animi reiciendis autem perferendis.
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="tab" id="skill" >
         <div class="container">
@@ -163,12 +159,11 @@
     <div class="tab" id="project" >
         <div class="container">
             <div class="list">
-                <a href="" rel="noopener" target="_blank" title="item-link" class="item">
+<!--                 <a href="" rel="noopener" target="_blank" title="item-link" class="item">
                     <img title="img" src="images/project1.jpg">
                     <div class="index">#1</div>
                     <div class="name">Name Project</div>
                     <div class="des">
-                        <!-- 20 -->
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, sint? Amet minus similique officiis enim impedit unde cumque id corrupti!
                     </div>
                     <div class="author">
@@ -178,13 +173,12 @@
                             <i class="fa-regular fa-clock"></i>
                         </div>
                     </div>
-                </a>
-                <a href="" rel="noopener" target="_blank" title="item-link" class="item">
+                </a> -->
+<!--                 <a href="" rel="noopener" target="_blank" title="item-link" class="item">
                     <img title="img" src="images/project2.jpg">
                     <div class="index">#2</div>
                     <div class="name">Name Project</div>
                     <div class="des">
-                        <!-- 20 -->
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, sint? Amet minus similique officiis enim impedit unde cumque id corrupti!
                     </div>
                     <div class="author">
@@ -194,13 +188,12 @@
                             <i class="fa-regular fa-clock"></i>
                         </div>
                     </div>
-                </a>
-                <a href="" rel="noopener" target="_blank" title="item-link" class="item">
+                </a> -->
+<!--                 <a href="" rel="noopener" target="_blank" title="item-link" class="item">
                     <img title="img" src="images/project3.jpg">
                     <div class="index">#3</div>
                     <div class="name">Name Project</div>
                     <div class="des">
-                        <!-- 20 -->
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, sint? Amet minus similique officiis enim impedit unde cumque id corrupti!
                     </div>
                     <div class="author">
@@ -210,13 +203,12 @@
                             <i class="fa-regular fa-clock"></i>
                         </div>
                     </div>
-                </a>
-                <a href="" rel="noopener" target="_blank" title="item-link" class="item">
+                </a> -->
+<!--                 <a href="" rel="noopener" target="_blank" title="item-link" class="item">
                     <img title="img" src="images/project4.jpg">
                     <div class="index">#4</div>
                     <div class="name">Name Project</div>
                     <div class="des">
-                        <!-- 20 -->
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, sint? Amet minus similique officiis enim impedit unde cumque id corrupti!
                     </div>
                     <div class="author">
@@ -226,13 +218,12 @@
                             <i class="fa-regular fa-clock"></i>
                         </div>
                     </div>
-                </a>
-                <a href="" rel="noopener" target="_blank" title="item-link" class="item">
+                </a> -->
+<!--                 <a href="" rel="noopener" target="_blank" title="item-link" class="item">
                     <img title="img" src="images/project5.jpg">
                     <div class="index">#5</div>
                     <div class="name">Name Project</div>
                     <div class="des">
-                        <!-- 20 -->
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, sint? Amet minus similique officiis enim impedit unde cumque id corrupti!
                     </div>
                     <div class="author">
@@ -242,12 +233,12 @@
                             <i class="fa-regular fa-clock"></i>
                         </div>
                     </div>
-                </a>
+                </a> -->
 
                  <!-- Movies_4U -->
                 <a href="https://aksel-elomari.github.io/Movies_4U" rel="noopener" target="_blank" title="item-link" class="item">
                     <img title="img" src="./images/mweb-01.jpg">
-                    <div class="index">#6</div>
+                    <div class="index">#1</div>
                     <div class="name">Movies_4U</div>
                     <div class="des">
                         Movies_4U is the best free streaming Movies website 2024. where you can watch movies / TvShoes/ Anime / Animation online for free. no regestration required with a large database and great features. we're confident that Movies_4U is the best free online movie site in the space you just can't mess.
@@ -263,10 +254,9 @@
                  <!-- Hinto -->
                 <a href="https://aksel-elomari.github.io/HINTO/" rel="noopener" target="_blank" title="item-link" class="item">
                     <img title="img" src="./images/mweb-03.png">
-                    <div class="index">#7</div>
+                    <div class="index">#2</div>
                     <div class="name">HINTO</div>
                     <div class="des">
-                        <!-- 20 -->
                         the best free movies streaming website
                     </div>
                     <div class="author">
@@ -280,10 +270,9 @@
                 <!-- Anime_4U -->
                 <a href="https://aksel-elomari.github.io/Anime_4U/" rel="noopener" target="_blank" title="item-link" class="item">
                     <img title="img" src="./images/mweb-02.png">
-                    <div class="index">#8</div>
+                    <div class="index">#3</div>
                     <div class="name">Anime_4u</div>
                     <div class="des">
-                        <!-- 20 -->
                         the best free movies streaming website
                     </div>
                     <div class="author">
@@ -297,7 +286,7 @@
                 <!-- Dashboar Page -->
                 <a href="https://aksel-elomari.github.io/MoviesDashboard/" rel="noopener" target="_blank" title="item-link" class="item">
                     <img title="img" src="./images/dashboard.png">
-                    <div class="index">#9</div>
+                    <div class="index">#4</div>
                     <div class="name">Ecomerce website user Dashboard</div>
                     <div class="des">
                         <!-- 20 -->
@@ -314,7 +303,7 @@
                 <!-- Books Online Store Landing Page -->
                 <a href="https://aksel-elomari.github.io/Books/" rel="noopener" target="_blank" title="item-link" class="item">
                     <img title="img" src="./images/Landing-Books.png">
-                    <div class="index">#10</div>
+                    <div class="index">#5</div>
                     <div class="name">Online Store To sell Books</div>
                     <div class="des">
                         <!-- 20 -->
@@ -332,10 +321,9 @@
                 <!-- Usage Dashboard for Online store / Books -->
                 <a href="https://aksel-elomari.github.io/Books__dash/" rel="noopener" target="_blank" title="item-link" class="item">
                     <img title="img" src="./images/Dash-Books.png">
-                    <div class="index">#11</div>
+                    <div class="index">#6</div>
                     <div class="name">Online Store || Dashboard</div>
                     <div class="des">
-                        <!-- 20 -->
                         Beutifull and Responsive Designe for a user Dashbard in Books Website 
                     </div>
                     <div class="author">
