--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </div>
 
                 <div class="item">
-                    <i class="fa-brands fa-react"></i>
+                   <i class="fa-brands fa-bootstrap"></i>
                     <div class="name">Bootstrap</div>
                     <div class="des">
                         <!-- 7 -->
@@ -145,7 +145,7 @@
                 </div>
 
                 <div class="item">
-                    <i class="fa-brands fa-angular"></i>
+                    <i class="fa-brands fa-react"></i>
                     <div class="name">React js</div>
                     <div class="des">
                         <!-- 7 -->
