--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio|AYOUB ELOMARI</title>
     <meta name="p:domain_verify" content="dc761a2ebed593222751a64e782ceabb"/>
+    <--! Pinterest Page Link -->
+    <meta name="p:domain_verify" content="dc761a2ebed593222751a64e782ceabb"/>
+    <--! Pinterest Page Link -->
+        
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
