--- a/index.html
+++ b/index.html
@@ -46,41 +46,42 @@
         </div>
     </div>
 
-<!--     <div class="tab" id="experience">
+    <div class="tab" id="experience">
         <div class="container">
             <div class="list">
                 <div class="item">
-                    <div class="time">2015</div>
+                    <div class="time">2020</div>
                     <i class="fa-solid fa-school-flag"></i>
                     <div class="content">
-                        <div class="job">I'm Go To School</div>
-                        <div class="company">Name School</div>
+                        <div class="job">Graduated from school</div>
+                        <div class="company">Taghbalt Height School</div>
                         <div class="des">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates perspiciatis veniam animi reiciendis autem perferendis.
+                            Arts and Humanities major
                         </div>
                     </div>
                 </div>
 
                 <div class="item">
-                    <div class="time">2019</div>
+                    <div class="time">2020 to 2023</div>
                     <i class="fa-solid fa-briefcase"></i>
                     <div class="content">
-                        <div class="job">BackEnd Developer</div>
-                        <div class="company">Name Company</div>
+                        <div class="job">College Student</div>
+                        <div class="company">University of "IBN ZOHER|AGADIR"</div>
                         <div class="des">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates perspiciatis veniam animi reiciendis autem perferendis.
+                            I joined The College of Law and Rights 
                         </div>
                     </div>
                 </div>
 
                 <div class="item">
-                    <div class="time">2020</div>
+                    <div class="time">2023</div>
                     <i class="fa-solid fa-briefcase"></i>
                     <div class="content">
                         <div class="job">FrondEnd Developer</div>
-                        <div class="company">Name Company ABC</div>
+                        <div class="company">Duxcluse Code Cump</div>
                         <div class="des">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates perspiciatis veniam animi reiciendis autem perferendis.
+                            Dosclos Institute is an educational institution located in the city of Agadir, Morocco.
+                             Here I learned the basics of website and software development for about 3 months and received a certificate of success with honor and appreciation from my supervisors.
                         </div>
                     </div>
                 </div>
@@ -90,15 +91,15 @@
                     <i class="fa-solid fa-briefcase"></i>
                     <div class="content">
                         <div class="job">FullStack Developer</div>
-                        <div class="company">Name Company AAA</div>
+                        <div class="company">FreeLancer</div>
                         <div class="des">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates perspiciatis veniam animi reiciendis autem perferendis.
+                            Since graduating from the institute, I have developed my skills in the world of programming and website development. Over the past years, I have continued to hone my skills by working on various projects and trying to create for myself a set of challenges and thresholds that I have proudly and diligently overcome. This is what made me who I am today, a professional software developer ready to work on any project, no matter how difficult, characterized by patience and diligence. Put your trust in me and together we will build your dream website that will catch the attention of customers.
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <div class="tab" id="skill" >
         <div class="container">
@@ -163,85 +164,9 @@
     <div class="tab" id="project" >
         <div class="container">
             <div class="list">
-<!--                 <a href="" rel="noopener" target="_blank" title="item-link" class="item">
-                    <img title="img" src="images/project1.jpg">
-                    <div class="index">#1</div>
-                    <div class="name">Name Project</div>
-                    <div class="des">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, sint? Amet minus similique officiis enim impedit unde cumque id corrupti!
-                    </div>
-                    <div class="author">
-                        <div class="job">FullStack</div>
-                        <div class="time">
-                            2022/10/10
-                            <i class="fa-regular fa-clock"></i>
-                        </div>
-                    </div>
-                </a> -->
-<!--                 <a href="" rel="noopener" target="_blank" title="item-link" class="item">
-                    <img title="img" src="images/project2.jpg">
-                    <div class="index">#2</div>
-                    <div class="name">Name Project</div>
-                    <div class="des">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, sint? Amet minus similique officiis enim impedit unde cumque id corrupti!
-                    </div>
-                    <div class="author">
-                        <div class="job">FullStack</div>
-                        <div class="time">
-                            2022/10/10
-                            <i class="fa-regular fa-clock"></i>
-                        </div>
-                    </div>
-                </a> -->
-<!--                 <a href="" rel="noopener" target="_blank" title="item-link" class="item">
-                    <img title="img" src="images/project3.jpg">
-                    <div class="index">#3</div>
-                    <div class="name">Name Project</div>
-                    <div class="des">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, sint? Amet minus similique officiis enim impedit unde cumque id corrupti!
-                    </div>
-                    <div class="author">
-                        <div class="job">FullStack</div>
-                        <div class="time">
-                            2022/10/10
-                            <i class="fa-regular fa-clock"></i>
-                        </div>
-                    </div>
-                </a> -->
-<!--                 <a href="" rel="noopener" target="_blank" title="item-link" class="item">
-                    <img title="img" src="images/project4.jpg">
-                    <div class="index">#4</div>
-                    <div class="name">Name Project</div>
-                    <div class="des">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, sint? Amet minus similique officiis enim impedit unde cumque id corrupti!
-                    </div>
-                    <div class="author">
-                        <div class="job">FullStack</div>
-                        <div class="time">
-                            2022/10/10
-                            <i class="fa-regular fa-clock"></i>
-                        </div>
-                    </div>
-                </a> -->
-<!--                 <a href="" rel="noopener" target="_blank" title="item-link" class="item">
-                    <img title="img" src="images/project5.jpg">
-                    <div class="index">#5</div>
-                    <div class="name">Name Project</div>
-                    <div class="des">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, sint? Amet minus similique officiis enim impedit unde cumque id corrupti!
-                    </div>
-                    <div class="author">
-                        <div class="job">FullStack</div>
-                        <div class="time">
-                            2022/10/10 
-                            <i class="fa-regular fa-clock"></i>
-                        </div>
-                    </div>
-                </a> -->
-
                  <!-- Movies_4U -->
-                <a href="https://aksel-elomari.github.io/Movies_4U" rel="noopener" target="_blank" title="item-link" class="item">
-                    <img title="img" src="./images/mweb-01.jpg">
+                <a href="https://aksel-elomari.github.io/Movies_4U/" rel="noopener" target="_blank" title="item-link" class="item">
+                    <img title="img" src="./images/Movies_4U_Home.png">
                     <div class="index">#1</div>
                     <div class="name">Movies_4U</div>
                     <div class="des">
@@ -255,13 +180,14 @@
                         </div>
                     </div>
                 </a>
-                 <!-- Hinto -->
-                <a href="https://aksel-elomari.github.io/HINTO/" rel="noopener" target="_blank" title="item-link" class="item">
-                    <img title="img" src="./images/mweb-03.png">
+                 <!-- Kugni:Wave -->
+                <a href="https://aksel-elomari.github.io/CogniWave/" rel="noopener" target="_blank" title="item-link" class="item">
+                    <img title="img" src="./images/KugniWave.png">
                     <div class="index">#2</div>
-                    <div class="name">HINTO</div>
+                    <div class="name">Kugni:Wave</div>
                     <div class="des">
-                        the best free movies streaming website
+                        Embark on your Mental journey with Professionals <br>
+                        Welcome to mental Mind, your gateway to improved mantals. We're here to help you scuipt a stranger, more resilent mind.
                     </div>
                     <div class="author">
                         <div class="job">FullStack</div>
@@ -272,8 +198,8 @@
                     </div>
                 </a>
                 <!-- Anime_4U -->
-                <a href="https://aksel-elomari.github.io/Anime_4U/" rel="noopener" target="_blank" title="item-link" class="item">
-                    <img title="img" src="./images/mweb-02.png">
+                <a href="https://aksel-elomari.github.io/Kurosaw/" rel="noopener" target="_blank" title="item-link" class="item">
+                    <img title="img" src="./images/Anime_4U.png">
                     <div class="index">#3</div>
                     <div class="name">Anime_4u</div>
                     <div class="des">
@@ -306,7 +232,7 @@
                 </a>
                 <!-- Books Online Store Landing Page -->
                 <a href="https://aksel-elomari.github.io/Books/" rel="noopener" target="_blank" title="item-link" class="item">
-                    <img title="img" src="./images/Landing-Books.png">
+                    <img title="img" src="./images/Landing-Books.jpg">
                     <div class="index">#5</div>
                     <div class="name">Online Store To sell Books</div>
                     <div class="des">
@@ -321,10 +247,9 @@
                         </div>
                     </div>
                 </a>
-
                 <!-- Usage Dashboard for Online store / Books -->
                 <a href="https://aksel-elomari.github.io/Books__dash/" rel="noopener" target="_blank" title="item-link" class="item">
-                    <img title="img" src="./images/Dash-Books.png">
+                    <img title="img" src="./images/Dash-Books.jpg">
                     <div class="index">#6</div>
                     <div class="name">Online Store || Dashboard</div>
                     <div class="des">
@@ -334,6 +259,54 @@
                         <div class="job">Front-End</div>
                         <div class="time">
                             2024/06/04
+                            <i class="fa-regular fa-clock"></i>
+                        </div>
+                    </div>
+                </a>
+                <!-- Comming Soon Page -->
+                <a href="https://aksel-elomari.github.io/CommingSoonPage/" rel="noopener" target="_blank" title="item-link" class="item">
+                    <img title="img" src="./images/Comming.png">
+                    <div class="index">#7</div>
+                    <div class="name">Comming Soon Page</div>
+                    <div class="des">
+                        Beutifull and Responsive Designe for a "Comming Soon Page " for Your Next Comming Project
+                    </div>
+                    <div class="author">
+                        <div class="job">Front-End</div>
+                        <div class="time">
+                            2024/08/20
+                            <i class="fa-regular fa-clock"></i>
+                        </div>
+                    </div>
+                </a>
+                <!-- Legal Justice Landing Page -->
+                <a href="https://aksel-elomari.github.io/legalJustice/" rel="noopener" target="_blank" title="item-link" class="item">
+                    <img title="img" src="./images/legalJustice.png">
+                    <div class="index">#8</div>
+                    <div class="name">Legal Justice Landing Page</div>
+                    <div class="des">
+                        Beutifull and Responsive Designe for a "Lawyer Portfolio Landing Page". Well Designed and ready to use
+                    </div>
+                    <div class="author">
+                        <div class="job">Front-End</div>
+                        <div class="time">
+                            2023/02/12
+                            <i class="fa-regular fa-clock"></i>
+                        </div>
+                    </div>
+                </a>
+                <!-- Floristy -->
+                <a href="https://aksel-elomari.github.io/floristy/" rel="noopener" target="_blank" title="item-link" class="item">
+                    <img title="img" src="./images/main-03.png">
+                    <div class="index">#9</div>
+                    <div class="name">Floristy</div>
+                    <div class="des">
+                        One of the best beutifull and Responsive and user freindly website app for Lawyers and Consilting Companies. to attractive and behave with ther clients.
+                    </div>
+                    <div class="author">
+                        <div class="job">Front-End</div>
+                        <div class="time">
+                            2023/01/20
                             <i class="fa-regular fa-clock"></i>
                         </div>
                     </div>
@@ -355,9 +328,14 @@
                 <div class="list">
                     <div class="item">
                         <i class="fa-solid fa-phone"></i>
-                        +212 606100950
+                        +212 606970233
                     </div>
 
+                    <div class="item">
+                        <i class="fa-brands fa-whatsapp"></i>
+                        +212 704315838
+                    </div>
+                    
                     <div class="item">
                         <i class="fa-regular fa-envelope"></i>
                         tagrawla2023@gmail.com
@@ -367,6 +345,7 @@
                         <i class="fa-brands fa-facebook"></i>
                         <a href="https://web.facebook.com/?ref=homescreenpwa&_rdc=1&_rdr" title="link">Ayoub El omari</a>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -376,3 +355,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
